# FHE-CNN

./: README.md
cnn_ckks/: CMakeLists.txt
cnn_ckks/common/: Makefile
cnn_ckks/cpu-ckks/single-key/ckks_bootstrapping/: Bootstrapper.cpp  Makefile  cmake_install.cmake
cnn_ckks/cpu-ckks/single-key/cnn/: Makefile  cnn_seal.cpp  cnn_seal.h  infer_seal.cpp  infer_seal.h
cnn_ckks/cpu-ckks/single-key/comp/: Makefile  SEALcomp.cpp
cnn_ckks/run/: run_cnn.cpp
pretrained_parameters/resnet110_new/: conv1_weight.txt  layer1_0_conv1_weight.txt  layer1_0_conv2_weight.txt  layer1_10_conv1_weight.txt  layer1_10_conv2_weight.txt  layer1_11_conv1_weight.txt  layer1_11_conv2_weight.txt  layer1_12_conv1_weight.txt  layer1_12_conv2_weight.txt  layer1_13_conv1_weight.txt  layer1_13_conv2_weight.txt  layer1_14_conv1_weight.txt  layer1_14_conv2_weight.txt  layer1_15_conv1_weight.txt  layer1_15_conv2_weight.txt  layer1_16_conv1_weight.txt  layer1_16_conv2_weight.txt  layer1_17_conv1_weight.txt  layer1_17_conv2_weight.txt  layer1_1_conv1_weight.txt  layer1_1_conv2_weight.txt  layer1_2_conv1_weight.txt  layer1_2_conv2_weight.txt  layer1_3_conv1_weight.txt  layer1_3_conv2_weight.txt  layer1_4_conv1_weight.txt  layer1_4_conv2_weight.txt  layer1_5_conv1_weight.txt  layer1_5_conv2_weight.txt  layer1_6_conv1_weight.txt  layer1_6_conv2_weight.txt  layer1_7_conv1_weight.txt  layer1_7_conv2_weight.txt  layer1_8_conv1_weight.txt  layer1_8_conv2_weight.txt  layer1_9_conv1_weight.txt  layer1_9_conv2_weight.txt  layer2_0_conv1_weight.txt  layer2_0_conv2_weight.txt  layer2_10_conv1_weight.txt  (+69 more)
pretrained_parameters/resnet20_new/: conv1_weight.txt  layer1_0_conv1_weight.txt  layer1_0_conv2_weight.txt  layer1_1_conv1_weight.txt  layer1_1_conv2_weight.txt  layer1_2_conv1_weight.txt  layer1_2_conv2_weight.txt  layer2_0_conv1_weight.txt  layer2_0_conv2_weight.txt  layer2_1_conv1_weight.txt  layer2_1_conv2_weight.txt  layer2_2_conv1_weight.txt  layer2_2_conv2_weight.txt  layer3_0_conv1_weight.txt  layer3_0_conv2_weight.txt  layer3_1_conv1_weight.txt  layer3_1_conv2_weight.txt  layer3_2_conv1_weight.txt  layer3_2_conv2_weight.txt
pretrained_parameters/resnet20_old/: bn1_bias.txt  bn1_running_mean.txt  bn1_running_var.txt  bn1_weight.txt  conv1_weight.txt  layer1_0_bn1_bias.txt  (+91 more)
result/: resnet20_cifar10_image0.txt  resnet20_cifar10_label_0_0
testFile/: test_label.txt
testFile_cifar100/: test_label.txt
(+452 files in other folders)
